email ready, has utm_source and utm_medium, footer fixed, etc

--- a/app/mailers/suggest_packages_email.html.erb
+++ b/app/mailers/suggest_packages_email.html.erb
@@ -685,12 +685,14 @@ body.outlook img {
                             <p class="lead">we noticed you signed up for VersionEye.com but didn't follow any libraries yet.</p>
                             <h3>What is VersionEye?</h3>
                             <p class="lead">
-                              VersionEye is a tool for developers that tracks software libraries for programming languages like Java, PHP, Ruby or Python and notifies
-                              you whenever a new version of that library is released. This also works automatically with popular package managers like Maven, Bundler or NPM.
+                              VersionEye is a <strong>tool for developers</strong> that tracks software libraries for programming languages like Java, PHP, Ruby or Python.
+                            </p>
+                            <p>
+                              <strong>VersionEye notifies you whenever the developers release a new version of a library you use.</strong>
+                              This also works automatically with popular package managers like Maven, Bundler or NPM.
                             </p>
 
-                            <!-- <img width="580" height="300" src="http://placehold.it/580x300"> -->
-
+                            <p><strong>Popular libraries recently updated:</strong></p>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -723,7 +725,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/ruby/rails">
+                                  <a class="button" href="https://www.versioneye.com/ruby/rails?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -758,7 +760,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/ruby/nokogiri">
+                                  <a class="button" href="https://www.versioneye.com/ruby/nokogiri?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -794,7 +796,7 @@ body.outlook img {
                              <tr>
                                <td>
 
-                                 <a class="button" href="https://www.versioneye.com/python/Django">
+                                 <a class="button" href="https://www.versioneye.com/python/Django?utm_source=follow_suggestion&utm_medium=email">
                                    <table>
                                      <tr>
                                        <td>
@@ -831,7 +833,7 @@ body.outlook img {
                              <tr>
                                <td>
 
-                                 <a class="button" href="https://www.versioneye.com/nodejs/request">
+                                 <a class="button" href="https://www.versioneye.com/nodejs/request?utm_source=follow_suggestion&utm_medium=email">
                                    <table>
                                      <tr>
                                        <td>
@@ -866,7 +868,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/php/symfony:symfony">
+                                  <a class="button" href="https://www.versioneye.com/php/symfony:symfony?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -901,7 +903,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/php/zendframework:zendframework">
+                                  <a class="button" href="https://www.versioneye.com/php/zendframework:zendframework?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -938,11 +940,11 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/java/org.springframework:spring-core">
+                                  <a class="button" href="https://www.versioneye.com/java/org.hibernate:hibernate-core?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
-                                          Follow Hibern &raquo;
+                                          Follow Hibernate &raquo;
                                         </td>
                                       </tr>
                                     </table>
@@ -973,7 +975,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/java/org.springframework:spring-core">
+                                  <a class="button" href="https://www.versioneye.com/java/org.springframework:spring-core?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -1009,7 +1011,7 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/clojure/storm:storm">
+                                  <a class="button" href="https://www.versioneye.com/clojure/storm:storm?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
@@ -1045,109 +1047,11 @@ body.outlook img {
                               <tr>
                                 <td>
 
-                                  <a class="button" href="https://www.versioneye.com/objective-c/afnetworking">
+                                  <a class="button" href="https://www.versioneye.com/objective-c/afnetworking?utm_source=follow_suggestion&utm_medium=email">
                                     <table>
                                       <tr>
                                         <td>
                                           Follow AFNetworking &raquo;
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </a>
-
-                                </td>
-                              </tr>
-                            </table>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-
-                <!-- Panel with call to action -->
-                <table class="row  callout">
-                  <tr>
-
-                    <td class="wrapper last">
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="panel">
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-                    </td>
-
-                  </tr>
-                </table>
-                <br>
-                <!-- Article List 2 -->
-                <table class="row">
-                  <tr>
-                    <td class="wrapper">
-
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="three sub-columns">
-                            <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="http://placehold.it/110x110">
-                          </td>
-                          <td class="nine sub-columns last">
-                            <!-- Top Right sub-grid -->
-                            <h5>Title Ipsum <small>This is a note.</small></h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                            <!-- custom wrapped button -->
-                            <table class="five">
-                              <tr>
-                                <td>
-
-                                  <a class="button" href="#">
-                                    <table>
-                                      <tr>
-                                        <td>
-                                          Clickity Click &raquo;
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </a>
-
-                                </td>
-                              </tr>
-                            </table>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="three sub-columns">
-                            <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="http://placehold.it/110x110">
-                          </td>
-                          <td class="nine sub-columns last">
-                            <!-- Top Right sub-grid -->
-                            <h5>Title Ipsum <small>This is a note.</small></h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                            <!-- custom wrapped button -->
-                            <table class="five">
-                              <tr>
-                                <td>
-
-                                  <a class="button" href="#">
-                                    <table>
-                                      <tr>
-                                        <td>
-                                          Clickity Click &raquo;
                                         </td>
                                       </tr>
                                     </table>
@@ -1224,8 +1128,11 @@ body.outlook img {
                         <tr>
                           <td class="last right-text-pad">
                             <h5>Contact Info:</h5>
-                            <p>Phone: 408.341.0600</p>
-                            <p>Email: <a href="mailto:hseldon@trantor.com">hseldon@trantor.com</a></p>
+                            <p>Rudolf-Breitscheid-Straße 187<br/>
+                              14482 Potsdam<br/>
+                              Germany
+                            </p>
+                            <p>Email: <a href="mailto:contact@versioneye.com">contact@versioneye.com</a></p>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -1244,7 +1151,7 @@ body.outlook img {
                         <tr>
                           <td align="center">
                             <center>
-                              <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#"><unsubscribe>Unsubscribe</unsubscribe></a></p>
+                              <p style="text-align:center;"><a href="https://www.versioneye.com/terms">Terms</a> | <a href="https://www.versioneye.com/dataprivacy">Privacy</a> | <a href="http://www.disclaimer.de/disclaimer.htm?farbe=FFFFFF/000000/000000/000000">Disclaimer</a> | <a href="https://www.versioneye.com/settings/notifications"><unsubscribe>Unsubscribe</unsubscribe></a></p>
                             </center>
                           </td>
                           <td class="expander"></td>
