Small UI changes

--- a/app/views/products/_show_search_results_iterator.html.erb
+++ b/app/views/products/_show_search_results_iterator.html.erb
@@ -10,9 +10,7 @@
       </div>
 
       <div class = "span5">
-        <a href="<%= product_version_path(product) %>" class="searchResultLink">
-          <span ><%= product.name_version(name_limit) %></span>
-        </a><br/>
+        <a href="<%= product_version_path(product) %>" class="searchResultLink"><span ><%= product.name_version(name_limit) %></span></a><br/>
         <% if product.prod_type == "Maven2" %>
           <span class="meta-text-small">GroupId: <%= product.group_id %></span>
         <% else %>
