--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -919,3 +919,9 @@ img.centered {
   border-bottom: 1px solid lightgray;
   margin-right: 5px;
 }
+
+.meta_text_small{
+  font-size: 11px;
+  color: gray;
+}
+
