Remove unused css classes from footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="container footer opacity_weak round4" >
+<footer class="container footer" >
 
   <div class="container row" style="text-align: center; margin-bottom: 10px; font-size: 14px;">
     <%= link_to t(:page_footer_about), about_path %> |
