--- a/app/views/notification_mailer/status.html.erb
+++ b/app/views/notification_mailer/status.html.erb
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	</head>
-	<body>
-		<p>Hello Robert</p>
-		<p>
-			Today we send out <%= @count %> notification E-Mails. 
-		</p>
-		<p>
-			We keep you informed. <br/>
-			Have a great day!
-		</p>
-		<p>
-			Your VersionEye Team<br/>
-			<a href="http://www.versioneye.com">http://www.versioneye.com</a>
-		</p>
-	</body>
-</html>
+<p>Hey Admin Dude</p>
+<p>
+  Today we send out <%= @count %> notification E-Mails.
+</p>
+<p>
+  We keep you informed. <br/>
+  Have a great day!
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com">http://www.versioneye.com</a>
+</p>
