--- a/app/views/submitted_url_mailer/approved_url_email.html.erb
+++ b/app/views/submitted_url_mailer/approved_url_email.html.erb
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
+<p>
+  Hey <%= ", #{@user.fullname}!" unless @user.nil? %>
+</p>
+<p>
+  Your submitted URL <i><%= @submitted_url.url %></i> was approved. <br/>
+  We integrated it into our crawler framework. You will get a notification as soon
+  we crawled the resource the first time.
+</p>
+<p>
+  We keep you informed. <br/>
+  Have a great day!
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com?utm_medium=email&amp;utm_source=approved_url_email">http://www.versioneye.com</a>
+</p>
 
-  <p>Hey <%= ", #{@user.fullname}!" unless @user.nil? %></p>
-    <p>
-      Your submitted URL <i><%= @submitted_url.url %></i> was approved. <br/>
-      We integrated it into our crawler framework. You will get a notification as soon 
-      we crawled the resource the first time. 
-    </p>
-    <p>
-      We keep you informed. <br/>
-      Have a great day!
-    </p>
-    <p>
-      Your VersionEye Team<br/>
-      <a href="http://www.versioneye.com">http://www.versioneye.com</a>
-    </p>
-  </body>
-</html>
