--- a/app/views/submitted_url_mailer/declined_url_email.html.erb
+++ b/app/views/submitted_url_mailer/declined_url_email.html.erb
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-  <p>Hey <%= "#{@user.fullname}!" unless @user.nil?  %>, </p>
-    <p>
-      Your submitted URL <i><%= @submitted_url.url %></i> is declined. <br/>
-    </p>
-    <p>
-      Reason: <br />
-      <%= @submitted_url.declined_message %>
-    </p>
-    <p>
-      Your VersionEye Team<br/>
-      <a href="http://www.versioneye.com">http://www.versioneye.com</a>
-    </p>
-  </body>
-</html>
+<p>
+  Hey <%= "#{@user.fullname}!" unless @user.nil?  %>,
+</p>
+<p>
+  Your submitted URL <i><%= @submitted_url.url %></i> is declined. <br/>
+</p>
+<p>
+  Reason: <br />
+  <%= @submitted_url.declined_message %>
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com?utm_medium=email&amp;utm_source=declined_submission">http://www.versioneye.com</a>
+</p>
