--- a/app/views/submitted_url_mailer/integrated_url_email.html.erb
+++ b/app/views/submitted_url_mailer/integrated_url_email.html.erb
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-  <p>Hey <%= "#{@user.fullname}!" unless @user.nil? %>, </p>
-    <p>
-      Your submitted URL <i><%= @submitted_url.url %></i> is now successfully integrated to our page. <br/>
-    </p>
-    <p>
-      You can find more information on the package page:
-      <%= link_to @product.name, "http://www.versioneye.com/#{@product.language_esc}/#{@product.to_param}" %>
-    </p>
-    <p>
-      Best regards, <br/>
-      Your VersionEye Team<br/>
-      <a href="http://www.versioneye.com">http://www.versioneye.com</a>
-    </p>
-  </body>
-</html>
+<p>
+  Hey <%= "#{@user.fullname}!" unless @user.nil? %>,
+</p>
+<p>
+  Your submitted URL <i><%= @submitted_url.url %></i> is now successfully integrated to our page. <br/>
+</p>
+<p>
+  You can find more information on the package page:
+  <%= link_to @product.name, "http://www.versioneye.com/#{@product.language_esc}/#{@product.to_param}?utm_medium=email&amp;utm_source=integrated_submission_url" %>
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com?utm_medium=email&amp;utm_source=integrated_submission_url">http://www.versioneye.com</a>
+</p>
