--- a/app/views/user_mailer/collaboration_invitation.html.erb
+++ b/app/views/user_mailer/collaboration_invitation.html.erb
@@ -1,55 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <p>Hey Dude, </p>
-    <p>
-      <%= @caller[:fullname] %> invites you as project collaborator for his/her project <%= @project[:name] %>,
-      but sadly you're not a VersionEye user, not yet!
-      It'll be great if you can make <%= @caller[:fullname] %> happier and accept his/her invitation.
-    </p>
-
-    <p>
-        Little reminder how to accept <%= @caller[:fullname] %>'s invitation. <br />
-        1. <a href="https://www.versioneye.com/signup">Sign up </a><br />
-        2. Activate your account <br />
-        3. Select "Collaborations" on left nav-bar.<br />
-        4. Click "Approve".
-    </p>
-    <p>
-      Our signup page: <a href = "https://www.versioneye.com/signup">https://www.versioneye.com/signup</a>
-    </p>
-    <p>
-      Thanks for joining and have a great day!
-    </p>
-    <br/>
-Best regards, <br/>
-Your VersionEye Team<br/>
-<a href="http://www.versioneye.com">http://www.versioneye.com</a>
-<br/>
-      </div>
-      <div style="-moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px;
-        text-align: left;
-          margin-top: 15px;
-        padding: 20px;
-          width: 650px;
-          margin-left: auto;
-          margin-right: auto;
-          clear: both;
-        background-color: white;
-        font-size: 12px;
-        color: #808080;
-        word-wrap:break-word;" >
-        VersionEye GmbH | Invalidenstrasse 50/51 | 10557 Berlin | Germany |
-E-Mail: contact [at] versioneye.com | Amtsgericht: Berlin / Charlottenburg | Handelsregister: Berlin, HRB 144242 B | USt-IdNr.: DE282045007 | CEO: Robert Reiz<br/>
-<a href="https://www.versioneye.com/imprint">Imprint</a> / <a href="https://www.versioneye.com/impressum">Impressum</a>. Unsubscribe here: <a href="https://www.versioneye.com/settings/notifications">Notification Center</a>
-      </div>
-    </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-  </body>
-</html>
+<p>
+  Hey Dude,
+</p>
+<p>
+  <%= @caller[:fullname] %> invites you as project collaborator for his/her project <%= @project[:name] %>,
+  but sadly you're not a VersionEye user, not yet!
+  It'll be great if you can make <%= @caller[:fullname] %> happier and accept his/her invitation.
+</p>
+<p>
+    Little reminder how to accept <%= @caller[:fullname] %>'s invitation. <br />
+    1. <a href="https://www.versioneye.com/signup?utm_medium=email&amp;utm_source=collaboration_invitation">Sign up </a><br />
+    2. Activate your account <br />
+    3. Select "Collaborations" on left nav-bar.<br />
+    4. Click "Approve".
+</p>
+<p>
+  Our signup page: <a href = "https://www.versioneye.com/signup?utm_medium=email&amp;utm_source=collaboration_invitation">https://www.versioneye.com/signup</a>
+</p>
+<p>
+  Thanks for joining and have a great day!
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com?utm_medium=email&amp;utm_source=collaboration_invitation">http://www.versioneye.com</a>
+</p>
