--- a/app/views/user_mailer/reset_password.html.erb
+++ b/app/views/user_mailer/reset_password.html.erb
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	</head>
-	<body>
-		<p>Hello <%= @user.fullname %></p>
-		<p>
-    You've requested a new password for your's account at VersionEye.com. <br/>
-    Please visit <a href="<%= @url %>"> <%= @url %> </a> to change your 
-    password. This step is mandatory, because your old password doesnt work anymore. 
-		</p>
-		<p>
-			Have a great day!
-		</p>
-	</body>
-</html>
+<p>
+  Hello <%= @user.fullname %>
+</p>
+<p>
+  You've requested a new password for your's account at VersionEye.com. <br/>
+  Please visit <a href="<%= @url %>?utm_medium=email&amp;utm_source=reset_password"> <%= @url %> </a> to change your
+  password. This step is mandatory, because your old password doesnt work anymore.
+</p>
+<p>
+  Have a great day!
+</p>
