--- a/app/views/user_mailer/verification_email_reminder.html.erb
+++ b/app/views/user_mailer/verification_email_reminder.html.erb
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	</head>
-	<body>
-		<p>Hello <%= @user.fullname %></p>
-		<p>
-			Thank you for signing up at VersionEye.com. <br/>
-			We noticed that you still didn't activate your account. <br/>
-			Please click the verification link below to activate your account:
-		</p>
-		<p>
-			Verification Link: <a href="<%= @verificationlink %>"><%= @verificationlink %></a><br />
-		</p>
-		<p>
-			Thanks for joining and have a great day!
-		</p>
-		<p>
-			Your VersionEye Team
-		</p>
-	</body>
-</html>
+<p>
+  Hello <%= @user.fullname %>
+</p>
+<p>
+  Thank you for signing up at VersionEye.com. <br/>
+  We noticed that you still didn't activate your account. <br/>
+  Please click the verification link below to activate your account:
+</p>
+<p>
+  Verification Link: <a href="<%= @verificationlink %>?utm_medium=email&amp;utm_source=verification_reminder"><%= @verificationlink %></a><br />
+</p>
+<p>
+  Thanks for joining and have a great day!
+</p>
+<p>
+  Your VersionEye Team<br/>
+  <a href="http://www.versioneye.com?utm_medium=email&amp;utm_source=verification_reminder">http://www.versioneye.com</a>
+</p>
