Add link to our new blog to the footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="/faq">FAQs</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
     <a href="JavaScript: load_dialog_feedback()">Feedback</a> |
-    <a href="http://versioneye.wordpress.com/" target="new_Blog">Company Blog</a> |
+    <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> |
     <%= link_to "API", version_eye_api_path %>
   </div>
 
