--- a/app/views/user/bitbucket_repos/init.html.erb
+++ b/app/views/user/bitbucket_repos/init.html.erb
@@ -190,7 +190,7 @@
               class="onoffswitch-checkbox github-switch"
               id="{{= switch_id }}"
               {{= is_imported ? ' checked ': '' }}
-              data-scm-id = "{{= repo.bitbucket_id }}"
+              data-scm-id = "{{= repo._id }}"
               data-scm-project-id = "{{= project_info['project_id'] }}"
               data-scm-fullname = "{{= repo.fullname }}"
               data-scm-branch = "{{= branch }}"
